--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve",
+    "start": "node dist/bundle.js",
     "build": "webpack"
   },
   "keywords": [],
