--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "dotenv-webpack": "^8.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
